# BrickGame_v2

./: .gitignore  CMakeLists.txt  Makefile  MakefileSnake  compile_commands.json  main.c  main.cpp  snake_doxy  snake_readme.md  tetris_doxy  tetris_readme.md  update.c
brick_game/snake/: apple.cc  apple.cpp  backend.cc  backend.cpp  data_base.cc  data_base.cpp  fsm.cpp  game_manager.cc  game_manager.cpp  game_singleton.cc  game_singleton.cpp  main.c  main.cpp  memory_utils.cc  memory_utils.cpp  point.cc  point.cpp  snake.cc  snake.cpp  timer.cc  timer.cpp
brick_game/snake/db/: score.txt
brick_game/snake/include/: apple.h  data_base.h  game_manager.h  game_singleton.h  memory_utils.h  objects_code.h  point.h  snake.h  timer.h
brick_game/spec/: game_spec.h
brick_game/tetris/: backend.c  color.h  data_base.c  fsm.c  fsm.h  init_utils.c  level_manager.c  memory_utils.c  memory_utils.h  plan.txt  test_main.c  tetramino.h  tetramino_collection.c  tetramino_collection.h  tetris.c  tetris.h  tetris_state.h  tetris_utils.c  timer.c  utils.c  utils.h
brick_game/tetris/include/: color.h  data_base.h  fsm.h  init_utils.h  level_manager.h  memory_utils.h  objects_code.h  tetramino.h  tetramino_collection.h  tetris.h  tetris_info.h  tetris_state.h  tetris_utils.h  timer.h  utils.h
brick_game/tetris1/: data_base.c  fsm.c  tetramino_collection.c  tetris.c  tetris_utils.c  utils.c
brick_game/tetris1/include/: data_base.h  level_manager.h  tetramino.h  tetramino_collection.h  tetris.h  tetris_info.h  timer.h  utils.h
common/: controller.cpp  controller.h
gui/cli/: game_field.c  init_frontend.c  key.c  key_configuretion.c  main.c  panel.c  window.c
gui/cli/include/: button.h  frontend.h  game_field.h  init_frontend.h  key.h  key_configuration.h  objects.h  panel.h  window.h
gui/clic/: init_frontend.c  key.c  key_configuretion.c  window.c
gui/clic/include/: button.h  color.h  frontend.h  init_frontend.h  key.h  key_configuration.h  window.h
gui/common/: controller.cc  controller.cpp  controller.h
gui/desktop/: area.cpp  area.h  color_convert.cc  color_convert.cpp  color_convert.h  field.cpp  field.h  field_widget.cc  field_widget.cpp  field_widget.h  game_field.cpp  game_field.h  main.cc  main.cpp  menu.cc  menu.cpp  menu.h  objects_code.h  window.cc  window.cpp  window.h  window_defines.h
gui/desktop/include/: field_widget.h  menu.h  window.h  window_defines.h
tests/: test_fsm.c  test_level_manager.c  test_logic.c  test_memory_utils.c  test_timer.c  tests.h
tests/snake_tests/: test.c  test_eat_mechanics.cc  test_movement.cc  test_snake_construct.cc  test_speed_timer.cc  test_update_state.cc  test_user_input.cc  tester.cc  tests.h
tests/tetris_tests/: test_fsm.c  test_level_manager.c  test_logic.c  test_main.c  test_memory_utils.c  test_timer.c  tests.h
